--- a/charts/incubator/kah-common-chart/Chart.yaml
+++ b/charts/incubator/kah-common-chart/Chart.yaml
@@ -2,15 +2,15 @@
 apiVersion: v2
 description: A KaH-common powered chart template. This can be useful for small projects that don't have their own chart.
 name: kah-common-chart
-version: 1.2.2
+version: 1.2.3
 maintainers:
   - name: bjw-s
     email: me@bjw-s.dev
 dependencies:
   - name: common
-    repository: https://library-charts.k8s-at-home.com
-    version: 4.5.2
+    repository: https://danmanners.github.io/k8s-at-home-charts
+    version: 4.5.3
 annotations:
   artifacthub.io/changes: |-
     - kind: changed
-      description: Upgraded `common` chart dependency to version 4.5.2
+      description: Upgraded `common` chart dependency to version 4.5.3
